PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Apr 2008, PHP 5.2.6
- Fixed bug #44703 (htmlspecialchars() does not detect bad character set argument)
  (Andy Wharmby)

10 Apr 2008, PHP 5.2.6RC5
- Fixed incorrect heredoc handling when label is used within the block.
  (Matt Wilmas)
- Fixed bug #44673 (With CGI argv/argc starts from arguments, not from script)
  (Dmitry)
- Fixed bug #44667 (proc_open() does not handle pipes with the mode 'wb'
  correctly). (Jani)
- Fixed bug #44650 (escaepshellscmd() does not check arg count). (Ilia)
- Fixed bug #44591 (imagegif's filename parameter). (Felipe)
- Fixed bug #32979 (OpenSSL stream->fd casts broken in 64-bit build)
  (stotty at tvnet dot hu)

03 Apr 2008, PHP 5.2.6RC4
- Fixed possible stack buffer overflow in FastCGI SAPI. (Andrei Nigmatulin)
- Fixed sending of uninitialized paddings which may contain some information.
  (Andrei Nigmatulin)
- Fixed bug #44663 (Crash in imap_mail_compose if "body" parameter invalid).
  (Ilia)
- Fixed bug #44613 (Crash inside imap_headerinfo()). (Ilia, jmessa)
- Fixed bug #44603 (Order issues with Content-Type/Length headers on
  POST). (Ilia)
- Fixed bug #44594 (imap_open() does not validate # of retries parameter).
  (Ilia)
- Fixed bug #44557 (Crash in imap_setacl when supplied integer as username)
  (Thomas Jarosch)

27 Mar 2008, PHP 5.2.6RC3
- Properly address incomplete multibyte chars inside escapeshellcmd() (Ilia,
  Stefan Esser)
- Fix integer overflow in printf(). (Stas, Maksymilian Aciemowicz)
- Fixed bug #44487 (call_user_method_array issues a warning when throwing
   an exception). (David Soria Parra)
- Fixed bug #44478 (Inconsistent behaviour when assigning new nodes). 
  (Rob, Felipe)
- Fixed bug #44445 (email validator does not handle domains starting/ending 
  with a -). (Ilia)
- Fixed bug #44440 (st_blocks undefined under BeOS). (Felipe)